--- a/FlickerBrowser/app/src/main/res/layout/activity_search.xml
+++ b/FlickerBrowser/app/src/main/res/layout/activity_search.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="academy.learnprogramming.flickrbrowser.MainActivity">
+    tools:context="academy.learnprogramming.flickrbrowser.SearchActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -20,7 +20,5 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </com.google.android.material.appbar.AppBarLayout>
-
-    <include layout="@layout/content_main"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
